--- a/snippets/filter-form.liquid
+++ b/snippets/filter-form.liquid
@@ -1,7 +1,15 @@
 <form class="filter-form">
+  <div class="filter-drawer-header">
+    <h3>Filter</h3>
+    <button type="button" class="filter-close-btn"><i class="fa-solid fa-x"></i></button>
+  </div>
+  <div class="filters-container">
   {%- for filter in collection.filters -%}
-    <details class="filter-group">
-      <summary class="filter-group-summary">
+    {% if filter.active_values.size > 0 %}
+    {% assign filter_has_values = filter.active_values.size %}
+  {% endif %}
+    <div class="filter-group">
+      <div class="filter-group-summary">
         <div>
           <span>{{ filter.label }}</span>
 
@@ -9,7 +17,7 @@
             <span>({{ filter.active_values.size }})</span>
           {%- endif -%}
         </div>
-      </summary>
+      </div>
 
       <div class="filter-group-display">
         <div class="filter-group-display__header">
@@ -24,25 +32,42 @@
           {%- when 'boolean' or 'list' -%}
           <ul class="filter-group-display__list">
             {%- for filter_value in filter.values -%}
-              <li class="filter-group-display__list-item">
-                <label for="Filter-{{ filter.param_name }}-{{ forloop.index }}">
-                  <input
-                    type="checkbox"
-                    name="{{ filter_value.param_name }}"
-                    value="{{ filter_value.value }}"
-                    id="Filter-{{ filter.param_name }}-{{ forloop.index }}"
-                    {% if filter_value.active -%}checked{%- endif %}
-                    {% if filter_value.count == 0 and filter_value.active == false -%}disabled{%- endif %}>{{ filter_value.label }}</label>
+              <li
+                class="filter-group-display__list-item
+                {% if filter_value.active -%}
+                  active{%- endif %}">
+                {% if filter_value.count == 0 and filter_value.active == false -%}
+                  <div class="single-filter-value disabled">
+                    <div class="checkbox-wrapper"><svg focusable="false" viewBox="0 0 24 24" role="presentation"><path fill="currentColor" d="M9 20l-7-7 3-3 4 4L19 4l3 3z"></path></svg></div>
+                    {{ filter_value.label }}
+                    </div>
+                {%  elsif filter_value.active %}
+                    <a class="single-filter-value" href="{{ filter_value.url_to_remove }}">
+                        <div class="checkbox-wrapper"><svg focusable="false" viewBox="0 0 24 24" role="presentation"><path fill="currentColor" d="M9 20l-7-7 3-3 4 4L19 4l3 3z"></path></svg></div>
+                        {{ filter_value.label }}
+                    </a>
+                {% else %}
+                  <a class="single-filter-value" href="{{ filter_value.url_to_add }}">
+                    <div class="checkbox-wrapper">
+                        </div>
+                    {{ filter_value.label }}
+                </a>
+                {%- endif %}
+                {% comment %} <input
+                  type="checkbox"
+                  name="{{ filter_value.param_name }}"
+                  value="{{ filter_value.value }}"
+                  id="Filter-{{ filter.param_name }}-{{ forloop.index }}"
+                  {% if filter_value.active -%}checked{%- endif %}
+                {% if filter_value.count == 0 and filter_value.active == false -%}disabled{%- endif %}> {% endcomment %}
+
               </li>
             {%- endfor -%}
           </ul>
-
-          <div class="filter-group-display__submit">
-            <input type="submit" value="Apply">
-          </div>
           {%- when 'price_range' -%}
           <div class="filter-group-display__price-range">
             <div class="filter-group-display__price-range-from">
+                <label for="Filter-{{ filter.min_value.param_name }}">From</label>
               <span>{{ cart.currency.symbol }}</span>
 
               <input
@@ -55,10 +80,9 @@
                 placeholder="0"
                 min="0"
                 max="{{ filter.range_max | money_without_currency | replace: ',', '' }}">
-
-              <label for="Filter-{{ filter.min_value.param_name }}">From</label>
             </div>
             <div class="filter-group-display__price-range-to">
+                <label for="Filter-{{ filter.max_value.param_name }}">To</label>
               <span>{{ cart.currency.symbol }}</span>
 
               <input
@@ -72,37 +96,23 @@
                 min="0"
                 max="{{ filter.range_max | money_without_currency | replace: ',', '' }}">
 
-              <label for="Filter-{{ filter.max_value.param_name }}">To</label>
             </div>
           </div>
 
           <div class="filter-group-display__submit">
-            <input type="submit" value="Apply">
+            <button type="submit">Filter</button>
           </div>
         {%- endcase -%}
       </div>
-    </details>
+    </div>
   {%- endfor -%}
-
-  <div class="active-filters">
-    <a href="{{ collection.url }}?sort_by={{ collection.sort_by }}" class="active-filters__clear">Clear all</a>
-
-    {%- for filter in collection.filters -%}
-      {%- if filter.type == "price_range" -%}
-        {%- if filter.min_value.value != nil or filter.max_value.value != nil -%}
-          <a class="active-filters__remove-filter" href="{{ filter.url_to_remove }}">
-            {%- assign min_value = filter.min_value.value | default: 0 -%}
-            {%- assign max_value = filter.max_value.value | default: filter.range_max -%}
-            {{ min_value | money }} - {{ max_value | money }} X
-          </a>
-        {%- endif -%}
-      {%- else -%}
-        {%- for filter_value in filter.active_values -%}
-          <a class="active-filters__remove-filter" href="{{ filter_value.url_to_remove }}">
-            {{ filter.label }}: {{ filter_value.label }} X
-          </a>
-        {%- endfor -%}
-      {%- endif- %}
-    {%- endfor -%}
   </div>
+  {% if filter_has_values > 0 %}
+  <div class="filter-drawer-bottom">
+    <a href="{{ collection.url }}?sort_by={{ collection.sort_by }}" class="active-filters__clear">
+            Clear all
+            <i class="fa-solid fa-arrow-right"></i>
+            </a>
+  </div>
+    {% endif %}
 </form>
