testing reccomendations api

--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -218,8 +218,8 @@
   {% include 'related-recent-products' %}
 </div>
 
-{%- if recommendations.performed? -%}
-  <div id="product-recommendations">
+<div id="product-recommendations">
+  {%- if recommendations.performed? -%}
     {%- if recommendations.products_count > 0 -%}
       {% if recommendations.intent == 'related' %}
         <h2>You may also like</h2>
@@ -238,23 +238,19 @@
         {%- endfor -%}
       </ul>
     {%- endif -%}
-  </div>
-{%- endif -%}
+  {%- endif -%}
+</div>
 
 
 <script>
-  const productId = {{product.id}}
+  const productId = {{ product.id }}
+  console.log(productId);
   const productRecommendationsSection = document.querySelector('.product-recommendations');
 
-  fetch(window.Shopify.routes.root + `recommendations/products?product_id=${productId}&limit=4&section_id=product-recommendations&intent=related`).then(response => response.text()).then((text) => {
-    const html = document.createElement('div');
-    html.innerHTML = text;
-    const recommendations = html.querySelector('.product-recommendations');
-
-    if (recommendations && recommendations.innerHTML.trim().length) {
-      productRecommendationsSection.innerHTML = recommendations.innerHTML;
-    }
-  });
+  fetch(window.Shopify.routes.root + `recommendations/products?section_id=template--16826368229600__template&product_id=${productId}&limit=4&intent=related`).then(response => response.text()).then(data => {
+    debugger;
+    updateUIelement(data, ".product-recommendations")
+  })
 </script>
 
 
