working on fetch for recommended api

--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -214,9 +214,7 @@
     </div>
   </section>
 </div>
-<div class="related-recent-products-container">
-  {% include 'related-recent-products' %}
-</div>
+<div class="related-recent-products-container"></div>
 
 
 {% schema %}
