--- a/sections/related-products.liquid
+++ b/sections/related-products.liquid
@@ -1,4 +1,7 @@
-<section class="product-carousel" data-section-related="{{ section.id }}">
+<section
+  class="product-carousel"
+  data-section-related="{{ section.id }}"
+  data-product-id="{{ product.id }}">
   <div class="carousel-nav">
     <div class="carousel-nav-button">
       <span class="active">Related products</span>
@@ -17,47 +20,15 @@
         {%- endif -%}
       {%- endif -%}
     </div>
-    <div class="carousel-body">
-      {% for product in collections['men'].products limit: 4 %}
+    <div class="carousel-body" id="recently-visited">
+      {% for product in search.results limit: 4 %}
         {% render 'product-card' product: product %}
       {% endfor %}
     </div>
   </div>
 </section>
 
-<script defer>
-  const carouselNavButtons = document.querySelectorAll(".carousel-nav-button span");
-  const carouselBodys = document.querySelectorAll(".carousel-body");
-                                            
-                  carouselNavButtons.forEach((button, index) => {
-                    button.addEventListener("click", () => {
-                      carouselNavButtons.forEach((button) => button.classList.remove("active"));
-                      button.classList.add("active");
-                      carouselBodys.forEach((carousel) => carousel.classList.remove("active"));
-                      carouselBodys[index].classList.add("active");
-                    });
-                  });
-                                            
-                  const productId = {{ product.id }}
-  const sectionId = "{{ section.id }}"
-  fetch(window.Shopify.routes.root + `recommendations/products?section_id=${sectionId}&product_id=${productId}&limit=4&intent=related`).then(response => response.text()).then(data => {
-      updateUIelement(data, "#product-recommendations")
-                  })
-                                              
-                  //let recentlySeenItems= [];
-                  if("recently_seen" in localStorage) {
-                    let itemsInLocalStorage = JSON.parse(localStorage.getItem("recently_seen"))
-                    if (!itemsInLocalStorage.includes(`id:${productId}`)){
-                      let recentlySeenItems = [`id:${productId}`,...itemsInLocalStorage]
-                      if(recentlySeenItems.length > 10) recentlySeenItems.pop()
-                      localStorage.setItem("recently_seen", JSON.stringify(recentlySeenItems));
-                    }
-                    } 
-                    else {
-                      let recentlySeenItems = [`id:${productId}`]
-                      localStorage.setItem("recently_seen", JSON.stringify(recentlySeenItems));
-                    }
-                  //console.log(recentlySeenItems)</script>
+<script src="{{ 'related-recent-sections.js' | asset_url }}" defer></script>
 
 {% schema %}
   {
